plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.8-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.8pi'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' //Swagger

}
processResources.dependsOn('copyGitSubmodule')
tasks.register('copyGitSubmodule', Copy) {
	doFirst {
		mkdir 'src/main/resources'
	}
	from 'config/benepick'
	include '*.yml'
	into 'src/main/resources'
}

tasks.named('test') {
	useJUnitPlatform()
}